Add umami tracking

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async defer data-website-id="a3ed6396-94f4-4dd1-9e7a-8142fc210812" src="https://umami-production-af1c.up.railway.app/umami.js"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
